--- a/ProseCommandement/app/src/main/AndroidManifest.xml
+++ b/ProseCommandement/app/src/main/AndroidManifest.xml
@@ -1,47 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.prosecommandement">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ProseCommandement"
-        tools:targetApi="31">
-        <activity
-            android:name=".CombatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RecoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SurActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ConfirmationPopupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EcoCombatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EcoRecoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AuditActivity"
-            android:exported="false" />
+        android:theme="@style/AppTheme">
+
+        <!-- Activité principale (splash screen) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Activité de configuration -->
+        <activity
+            android:name=".ConfigActivity"
+            android:exported="false" />
+
+        <!-- Activité Mode Sûr -->
+        <activity
+            android:name=".SurActivity"
+            android:exported="false" />
+
+        <!-- Activité Mode Reconnaissance -->
+        <activity
+            android:name=".RecoActivity"
+            android:exported="false" />
+
+        <!-- Activité Mode Eco Reconnaissance -->
+        <activity
+            android:name=".EcoRecoActivity"
+            android:exported="false" />
+
+        <!-- Activité Mode Combat -->
+        <activity
+            android:name=".CombatActivity"
+            android:exported="false" />
+
+        <!-- Activité Mode Eco Combat -->
+        <activity
+            android:name=".EcoCombatActivity"
+            android:exported="false" />
+
+        <!-- Activité Mode Audit -->
+        <activity
+            android:name=".AuditActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
